@@ -20,8 +20,8 @@ import com.sparta.travelconquestbe.domain.routelocation.entity.RouteLocation;
 import com.sparta.travelconquestbe.domain.routelocation.repository.RouteLocationRepository;
 import com.sparta.travelconquestbe.domain.user.entity.User;
 import com.sparta.travelconquestbe.domain.user.repository.UserRepository;
+import jakarta.validation.constraints.Positive;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -87,6 +87,13 @@ public class RouteService {
   public Page<RouteSearchAllResponse> routeSearchAll(int page, int limit, RouteSort sort) {
     Pageable pageable = PageRequest.of(page - 1, limit);
     return routeRepository.routeSearchAll(pageable, sort);
+  }
+
+  @Transactional(readOnly = true)
+  public Page<RouteSearchAllResponse> routeSearchByKeyword(
+      @Positive int page, @Positive int limit, RouteSort sort, String keyword) {
+    Pageable pageable = PageRequest.of(page - 1, limit);
+    return routeRepository.routeSearchByKeyword(pageable, sort, keyword);
   }
 
   @Transactional
@@ -166,7 +173,7 @@ public class RouteService {
                             location.getLocationName(),
                             location.getLongitude().doubleValue(),
                             location.getLatitude().doubleValue()))
-                .collect(Collectors.toList()))
+                .toList())
         .build();
   }
 }
